--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                example.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -545,7 +545,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                example.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -571,7 +571,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                example.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -597,7 +597,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+               example.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -624,7 +624,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+               example.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -651,7 +651,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Category Name
               </div>
               <div class="airdrop-value vertical">
-                $7k
+                example.com
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -669,7 +669,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 <!--AMAZON BANNER-->
-<section class="wf-section"> 
+<div class="section-14 wf-section"> 
 
 <div class="alignleft">
      <script type="text/javascript">
@@ -689,7 +689,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
      </script>
      <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
     </div>
-</section>
+</div>
 
 <!--END OF AMAZON BANNER-->
 
@@ -874,7 +874,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 covidtracking.com
               </div>
               <div class="airdrop-rating vertical">
-                ★★★★
+                🦠
               </div>
             </div></a>
           </div>
@@ -886,9 +886,9 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 <!--NAMECHEAP BANNER-->
-<section class="wf-section"> 
+<div style="align-items:center!important;" class="section-14 wf-section"> 
 <a href="https://namecheap.pxf.io/a1LADN" alt="Namecheap" target="_blank" rel="sponsored"><img src="/5618-1187126.png" width="auto" height="auto"/></a>
-</section>
+</div>
 
 <!--END OF NAMECHEAP BANNER-->
 
@@ -1090,7 +1090,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
   </div>
 
 
-<section class="wf-section">
+<div class="section-14 wf-section">
 
 <div class="alignleft">
      <script type="text/javascript">
@@ -1111,7 +1111,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
      <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
     </div>
 
-</section>
+</div>
 
 
 
