--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@ border: 2px solid #000!important;
 box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   }
-  </style><!--PWABUILDER SCRIPTS-->
+  </style>
+
+<!--PWABUILDER SCRIPTS-->
 
   <script type="module">
    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
    const el = document.createElement('pwa-update');
    document.body.appendChild(el);
-  </script>
+</script>
+
+
   <script type="module" src=
   "https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
   <script type="text/javascript">
