--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
   crossorigin="anonymous"></script>
 </head>
 <body class="body-8">
+
+
+<div class="container">
+  <div class="item shark-1">
+    <img
+      src="/572A5151-285F-4D60-9EFC-43533B0437DB.png"
+      width="100"
+      alt="PWA Install Button"
+    >
+  </div>
+
   <div class="navsection wf-section">
     <div>
       <div data-collapse="all" data-animation="default"
@@ -93,7 +104,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
             "(max-width: 767px) 26px, (max-width: 991px) 3vw, 26px"
             class="image-9"></a><a href=
             "/pricing" target="_blank" class=
-            "button-9 w-button">Sign Up </a>
+            "button-9 w-button">Join Now ➜</a>
             <div class=
             "div-search w-hidden-medium w-hidden-small w-hidden-tiny">
               <form action="/search" class="search-2 w-form">
@@ -132,7 +143,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 <a href="#" class=
                 "category-link w-dropdown-link">Case Studies & Examples</a>
                 <a href="#" class=
-                "category-link w-dropdown-link">Hosting & CDN</a> 
+                "category-link w-dropdown-link">Deployment, Hosting & CDNs</a> 
 
 <a href=
                 "#" class="category-link w-dropdown-link">E-Commerce & Shopping Carts</a>
@@ -164,7 +175,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 <a href=
                 "/donors" class=
-                "category-link w-dropdown-link">Donor Programme</a>
+                "category-link w-dropdown-link">Donor Program</a>
 
 <a href="/events"
                 class=
@@ -172,7 +183,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 <a href="https://shop.jamstacker.xyz"
                 class=
-                "category-link w-dropdown-link">Features & Pricing</a>
+                "category-link w-dropdown-link">Features & Plans</a>
 
 <a href=
                 "/promotions" class="category-link w-dropdown-link">Official Merchandise</a>
@@ -183,15 +194,15 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 <a href="/stories"
                 target="_blank" class=
-                "category-link w-dropdown-link">Web Stories (Beta)</a>
+                "category-link w-dropdown-link">JAMstories Builder v1.0 (Beta)</a>
               </nav>
             </div>
 
-<a href="/community" class=
+<a href="/restricted" class=
             "nav-link-8 w-nav-link">Community Forum</a>
 
 <a href=
-            "/contact" class="nav-link-9 w-nav-link">Contact
+            "mailto:info@jamstacker.xyz" class="nav-link-9 w-nav-link">Contact
             Support</a>
           </nav>
           <div class="menu-button-2 w-nav-button">
@@ -227,7 +238,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       Campaign.</h1>
 
 <a href="/pricing" target="_blank" class=
-      "button-8 w-button"> Join The Club</a>
+      "button-8 w-button">Join Now ➜</a>
     </div>
   </div>
 
@@ -379,9 +390,9 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                     target="_blank" class="w-inline-block">
                     <div class="div-block-44"><img height="100"
                     width="205" alt="Advertisement" src=
-                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
+                    "/banners/0957FA17-0182-40F9-BA42-6F76D4D61092.png"
                     sizes="205px" srcset=
-                    "/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
+                    "/banners/0957FA17-0182-40F9-BA42-6F76D4D61092.png 500w, /banners/0957FA17-0182-40F9-BA42-6F76D4D61092.png 800w, /banners/0957FA17-0182-40F9-BA42-6F76D4D61092.png 1080w, /banners/0957FA17-0182-40F9-BA42-6F76D4D61092.png 1201w"
                     class="image-13"></div></a>
                   </div>
 
@@ -932,7 +943,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="Bejamas.io" src=
               "/F0286289-80AC-421A-9EF7-07A1DD00429E.png"
               class="image-2">
-              <h3 class="airdrop-name vertical"> Bejamas.io </h3>
+              <h3 class="airdrop-name vertical">Bejamas.io</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Popular
@@ -941,7 +952,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide 🌎
               </div>
               <div class="airdrop-value vertical">
-                $7k
+               <a href="#"><img src="/1D77FBEA-6F0D-4C8B-8FB4-F5CDA187A55D.png" alt="Netlify" width="18" height="auto"/></a> | <a href="#"><img src="/7E556FBC-D11D-4C04-9F30-210E04C39E7A.png" alt="Gatsby" width="18" height="auto"/></a>
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
