--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide 🌎
               </div>
               <div class="airdrop-value vertical">
-               <a href="#"><img src="/1D77FBEA-6F0D-4C8B-8FB4-F5CDA187A55D.png" alt="Netlify" width="18" height="auto"/></a> | <a href="#"><img src="/7E556FBC-D11D-4C04-9F30-210E04C39E7A.png" alt="Gatsby" width="18" height="auto"/></a>
+              Gatsby | Netlify
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
@@ -994,7 +994,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide 
               </div>
               <div class="airdrop-value vertical">
-                25+ Developers
+              <a href="https://ionos.com">Learn More +</a>
               </div>
               <div class="airdrop-rating vertical">
                 ★★★
@@ -1019,7 +1019,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide
               </div>
               <div class="airdrop-value vertical">
-                100+ Developers
+                <a href="https://upwork.com">Learn More +</a>
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
