--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 </head>
 <body class="body-8">
 
-
+<!--INSTALL PWA
 <pwa-install class="container-btn">
   <div class="item shark-1">
     <img
@@ -102,6 +102,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       alt="PWA Install Button"
     >
   </pwa-install>
+-->
+
 
   <div class="navsection wf-section">
     <div>
