--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide 
               </div>
               <div class="airdrop-value vertical">
-              <a href="https://ionos.com">Learn More +</a>
+              <a href="https://ionos.com">N/A</a>
               </div>
               <div class="airdrop-rating vertical">
                 ★★★
@@ -1021,7 +1021,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide
               </div>
               <div class="airdrop-value vertical">
-                <a href="https://upwork.com">Learn More +</a>
+                <a href="https://upwork.com">N/A</a>
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
