--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
   }
 
-.container-btn {
+.containerpwaintall {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -63,6 +63,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 }
 
   </style>
+
+<link href="https://cdn.ampproject.org/amp-story-player-v0.css" rel="stylesheet" type="text/css"> <link href="https://webstories.dev/assets/widget/v1/circleshape.css" rel="stylesheet" type="text/css"> <script src="https://webstories.dev/assets/widget/v1/player-min.js"></script>
 
 <!--PWABUILDER SCRIPTS-->
 
@@ -93,16 +95,6 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 </head>
 <body class="body-8">
 
-<!--INSTALL PWA
-<pwa-install class="container-btn">
-  <div class="item shark-1">
-    <img
-      src="/572A5151-285F-4D60-9EFC-43533B0437DB.png"
-      width="75"
-      alt="PWA Install Button"
-    >
-  </pwa-install>
--->
 
 
   <div class="navsection wf-section">
@@ -258,6 +250,18 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
       "button-8 w-button">Join Now ➜</a>
     </div>
   </div>
+
+<div>
+<pwa-install class="containerpwainstall">
+  <div class="item shark-1">
+    <img
+      src="/572A5151-285F-4D60-9EFC-43533B0437DB.png"
+      width="75"
+      alt="PWA Install Button"
+    >
+  </pwa-install>
+</div>
+
 
 
 <!---SPONSORED BANNERS-->
@@ -1143,6 +1147,13 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
      <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
     </div>
 
+</div>
+
+
+<!--VISUAL STORIES WIDGET-->
+
+<div class="section-9 wf-section">
+<div id="widget-vs" class="wdg-wpr"><script type="application/json">{"endpoint":"https://webstories.dev/widget/t/9617803/all/en/s/c1/g"}</script></div>
 </div>
 
 
