--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="Dygest.org" src=
               "/5F6D955E-63D2-46EB-970D-C58AEDBFA299.png"
               class="image-2">
-              <h3 class="airdrop-name vertical">The Notebook Project</h3>
+              <h3 class="h5 airdrop-name vertical">The Notebook Project</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Promoted
@@ -888,7 +888,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
               <img width="75" height="75" alt="COVID-19 Tracking Project" src=
               "/720A6176-5C82-4F01-A9C4-295B00C5C672.png"
               class="image-2">
-              <h3 class="airdrop-name vertical">COVID-19 Tracking Project</h3>
+              <h3 class="h5 airdrop-name vertical">COVID-19 Tracking Project</h3>
               <div style="background-color:#6a69e1" class=
               "label vertical-label vertical-label-tablet">
                 Featured
@@ -912,8 +912,8 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
 
 
 <!--NAMECHEAP BANNER-->
-<div style="align-items:center!important;" class="section-14 wf-section"> 
-<a href="https://namecheap.pxf.io/a1LADN" alt="Namecheap" target="_blank" rel="sponsored"><img src="/5618-1187126.png" width="auto" height="auto"/></a>
+<div class="section-9 wf-section"> 
+<a href="https://namecheap.pxf.io/a1LADN" alt="Namecheap" target="_blank"><img src="/5618-1187126.png" width="400" height="auto"/></a>
 </div>
 
 <!--END OF NAMECHEAP BANNER-->
@@ -990,7 +990,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide 
               </div>
               <div class="airdrop-value vertical">
-              <a href="https://ionos.com">N/A</a>
+             N/A
               </div>
               <div class="airdrop-rating vertical">
                 ★★★
@@ -1015,7 +1015,7 @@ box-shadow: inset 2px 2px 2px 0px rgba(0,0,0,0.75);
                 Worldwide
               </div>
               <div class="airdrop-value vertical">
-                <a href="https://upwork.com">N/A</a>
+               N/A
               </div>
               <div class="airdrop-rating vertical">
                 ★★★★
